<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/default_status_string"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/threads_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threads_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/param_threads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/threads_hint"
                android:inputType="number"
                android:textColor="#FC4092"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/saver_refresh_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saver_refresh_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/param_saver_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/saver_refresh_hint"
                android:inputType="number"
                android:textColor="#FC4092"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/start_string"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/stop_string"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/log_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/log_string"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/send_string"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <requestFocus />
    </LinearLayout>

</ScrollView>